--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h2 {
 	color: blue;
-	font: small-caps bolder 3em "Comic Sans MS", cursive, sans-serif;
+	font: small-caps bolder 3em  Arial, cursive, sans-serif;
 	text-decoration: underline;
 	height: 1em;
 	margin-bottom: 0px;
@@ -31,7 +31,7 @@ html {
 
 h1 {
 	text-align: center;
-	font: bold small-caps 7em "Comic Sans MS", cursive, sans-serif ;
+	font: bold small-caps 7em Arial, cursive, sans-serif ;
 	background-color: grey;
 	border-radius: 20px;
 	border-style: solid;
