changed main place into places_controller (from user_controller)

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,8 +1,4 @@
-
-<!-- DELETE THIS PAGE AND PUT IT INTO views/places/index.html.erb -->
-
-
-<!-- <h1>This is the main page!</h1>
+<h1>This is the main page!</h1>
 
 
 <div class="head">
@@ -29,8 +25,4 @@
 
 <div class="footer">
 <p>This is the footer</p>
-</div>  			-->
-
-
-
-<!-- DELETE THIS PAGE AND PUT IT INTO views/places/index.html.erb -->
+</div>
