--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Khaos</a>
+      <a class="navbar-brand" href="/">Khaos</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,8 +19,8 @@
       </ul> -->
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "How to" %></li>
-        <li><%= link_to "About Us" %></li>
+        <li><%= link_to "How to", '/HowTo'%></li>
+        <li><%= link_to "About Us", '/About' %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
