--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,18 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Lobster);
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 body{
 	font-family: 'Open Sans', sans-serif;
-	color: FFF000;
-}
-
-.col-sm-offset-1 {
-margin-right: 8.33333333%;
-}
-.mapsidebar{
-	margin-right: 10px;
-}
-
-.p{
-	font-family: 'Open Sans', sans-serif;
+	font-size:18px;
+	line-height:1.6;
 }
