--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "How to" %></li>
-        <li><%= link_to "About Us" %></li>
+        <li><%= link_to "How To" %></li>
+        <li><%= link_to "About"%></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
