--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,10 +13,12 @@
 	<div "inner-container">
 		<h1 class="title">Welcome to Khaos</h1>
 		<p class="prompt">Please enter your location here!</p>
-		<%= form_for(@input, url:'users/create', method: 'post') do |f|%>
-			<%= f.text_field :curloc %>
-			<%= f.submit "Find Me!" %>
-		<% end %>
+		<div "form">
+			<%= form_for(@input, url:'users/create', method: 'post') do |f|%>
+				<%= f.text_field :curloc %>
+				<%= f.submit "Find Me!" %>
+			<% end %>
+		</div>
 	</div>
 <!-- Footer -->
 </div>
