--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -3,10 +3,17 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import url(http://fonts.googleapis.com/css?family=Lobster);
 
+
+body{
+	text-align: center
+}
+
 video#videohome, video#video-capabilities {
 position: fixed;
 z-index: -9999;
 margin-top: -10%;
+height: 100%;
+width:100% ;
 }
 
 .hidden-sm {
@@ -20,7 +27,6 @@ display: block!important;
 .title, .prompt{	
 	color: #FFF000;	
 	font-family:'Lobster', cursive;
-	text-align: center;
 }
 
 .title{
@@ -33,6 +39,23 @@ display: block!important;
 	margin-top: 2%;
 }
 
-.inner-container.form{
-	text-align: center;
+
+input[type=text] {padding:5px; border:2px solid #ccc; 
+-webkit-border-radius: 5px;
+border-radius: 5px;
 }
+
+input[type=text]:focus {
+	border-color:#333; 
+}
+
+input[type=submit] {
+	padding:5px 15px; 
+	background:#FFF000; 
+	border:0 none;
+	cursor:pointer;
+	-webkit-border-radius: 5px;
+	border-radius: 5px; 
+}
+
+
