--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -8,12 +8,18 @@ body{
 	text-align: center
 }
 
+
+.video {
+	text-align: center;
+}
+
 video#videohome, video#video-capabilities {
 position: fixed;
 z-index: -9999;
 margin-top: -10%;
 height: 100%;
-width:100% ;
+width: 100% ;
+
 }
 
 .hidden-sm {
