--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,16 @@
 <!-- Header -->
 <!-- Body-->
-<div "container-new">
 
 	<!-- Video -->
-	<video id="videohome" class="hidden-xs hidden-sm" autoplay="true" loop="" muted="" style="height: 720px; width: 1280px;">
+<div class="video">	
+	<video id="videohome" class="hidden-xs hidden-sm" autoplay="true" loop="" muted="" style="height: 100%; width: 100%;">
 		<source src="http://player.vimeo.com/external/90068336.hd.mp4?s=df933ea0ef031de9a80ddc2814f23d06" type="video/mp4">
 		<source src="/static/vid/electrik-web-bw.webmhd.webm" type="video/webm">
 		<source src="/static/vid/electrik-web-bw.oggtheora.ogv" type="ogv">
 	</video>
+</div>
 
+<div "container-new">
 	<!--  -->
 	<div "inner-container">
 		<h1 class="title">Welcome to Khaos</h1>
