--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -73,7 +73,9 @@
         <%= link_to "Find me somewhere like this!", "places/button_random", :class => "Button", :method => "put"%> <br>
         <%= link_to "Restart algorithm", "places/reset", :class => "Button", :method => "put"%> <br>
     </div>
-    <p>Your reccomended place to go: <%= @place.loc %>, <%= @place.address %></p>
+   
+
+   <!--  <p>Your reccomended place to go: <%= @place.loc %>, <%= @place.address %></p> -->
     
 
 
