--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -49,17 +49,13 @@
       <%= render "sidebar" %>
     -->
 
-    <h1>Main page!</h1>
-
     <div class="loc">
       <p>
       Your current location is 
       <%= @user.curloc %>
-      <%= link_to "Wrong?", root_path %>
+      <%= link_to "(Wrong?)", root_path %>
       </p>
     </div>
-
-
 
     <div class="btn">
         <%= link_to "I hate this place", 'places/button_no', :class => "Button", :method => "put" %> <br>
@@ -71,9 +67,6 @@
  
   <!-- should have the @place.loc -->
   
-
-
-
     <div class="filters"> 
        <p>Find me a place to :</p>
        <%= link_to "Feed me!", "FeedMe", :method => "put"%> <br>
@@ -86,5 +79,7 @@
    
 
     <div id="map-canvas"/>
+
   </body>
+
 
