--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -27,3 +27,19 @@
 .navbar-default .navbar-brand {
   color: #000000;
 }
+
+.sidebar{
+position: fixed;
+top: 51px;
+bottom: 0;
+right: 0;
+z-index: 1000;
+display: block;
+padding-top: 0 px;
+padding-right: 5px;
+padding-left:5px;
+overflow-x: hidden;
+overflow-y: auto;
+background-color: #f5f5f5;
+border-left: 1px solid #eee;
+}
