--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -30,14 +30,7 @@
 
   </head>
 
-
-
-
-
-
   <body>
-
-
   <b>
     <% if flash[:success] %>
       <%= flash[:success] %>
@@ -49,13 +42,7 @@
 
 
 
-
-    <!-- sidebar? -->
-    <!-- 
-      <%= render "sidebar" %>
-    -->
-
-    <h1>Main page!</h1>
+<div class="container-main">
 
     <div class="loc">
       <p>
@@ -65,32 +52,61 @@
       </p>
     </div>
 
-
-
-    <div class="btn">
-        <%= link_to "I hate this place", 'places/button_no', :class => "Button", :method => "put" %> <br>
-        <%= link_to "Looks pretty alright~", "places/button_yes", :class => "Button", :method => "put" %> <br>
-        <%= link_to "Find me somewhere like this!", "places/button_random", :class => "Button", :method => "put"%> <br>
-        <%= link_to "Restart algorithm", "places/reset", :class => "Button", :method => "put"%> <br>
-    </div>
-   
-
    <!--  <p>Your reccomended place to go: <%= @place.loc %>, <%= @place.address %></p> -->
     
 
+    <div class="container-filter">
+        <div class="col-lg-2">
+           <p>Find me a place to :</p>
+        </div>
+          <div class="col-lg-1">
+         <%= link_to "Feed me!", "FeedMe", :class => "btn btn-primary",:method => "put"%> <br>
+         </div>
+         <div class="col-lg-1">
+         <%= link_to "Grab a drink!", "Drink", :class => "btn btn-primary",:method => "put" %><br>
+         </div>
+         <div class="col-lg-1">
+         <%= link_to "Shop!", "Shop", :class => "btn btn-primary",:method => "put" %><br>
+         </div>
+         <div class="col-lg-1">
+         <%= link_to "See or do!", "SeeDo", :class => "btn btn-primary",:method => "put" %><br>
+         </div>
+         <div class="col-lg-1">
+         <%= link_to "Anything!!!", "All",:class => "btn btn-primary", :method => "put" %><br>
+         </div>
+    </div>
+
+    <hr>
+
+    <div id="map-canvas"> </div>
+
+    <div class="container-btn">
+      <div class="col-lg-2">
+        <%= link_to "I hate this place", 'places/button_no', :class => "btn btn-primary", :method => "put" %> <br>
+      </div>
+      <div class="col-lg-2"> 
+        <%= link_to "Looks pretty alright~", "places/button_yes", :class => "btn btn-primary", :method => "put" %> <br>
+      </div>
+      <div class="col-lg-2">
+        <%= link_to "Find me "+"somewhere like this!", "places/button_random", :class => "btn btn-primary", :method => "put"%> <br>
+      </div>
+      <div class="col-lg-2">
+        <%= link_to "Restart algorithm", "places/reset", :class => "btn btn-primary", :method => "put"%> <br>
+      </div>
+    </div>
+</div>
 
 
-    <div class="filters"> 
-       <p>Find me a place to :</p>
-       <%= link_to "Feed me!", "FeedMe", :method => "put"%> <br>
-       <%= link_to "Grab a drink!", "Drink", :method => "put" %><br>
-       <%= link_to "Shop!", "Shop", :method => "put" %><br>
-       <%= link_to "See or do!", "SeeDo", :method => "put" %><br>
-       <%= link_to "Anything!!!", "All", :method => "put" %><br>
-   </div>
+    <!-- sidebar? -->
+  <ul class="col-sm-3 col-md-2 sidebar">
+    <li class="list-group-item">Title</li>
+    <li class="list-group-item">Place_name</li>
+    <li class="list-group-item">Image</li>
+    <li class="list-group-item">Description</li>
+    <li class="list-group-item">More infor</li>
+  </ul>
 
-   
 
-    <div id="map-canvas"/>
-  </body>
+
+</body>
 
