--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -3,15 +3,36 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import url(http://fonts.googleapis.com/css?family=Lobster);
 
-.container {
-	background-color: #9CF;
-	
+
+
+.body {
+	position:fixed;
+/*	background-color: #9CF;	*/
+	color: #FFF000;
 
 }
 
 .container-main{
 	width:980px;
 	height:600px;
+	text-align: center;
+}
+
+hr{
+	boader: 0;
+	border-bottom: 1px dashed #ccc;
+	background: #999;
+}
+
+.container-filter{
+	width:980px;
+	height:32px;
+}
+
+.container-btn{
+	margin-top: 3%;
+	width:980px;
+	height:32px;
 }
 
 
