--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,38 +1,104 @@
-  <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+  <div class="loc">
+    <p>
+    Your current location is 
+    <%= @user.curloc %>
+    <%= link_to "(Wrong?)", root_path %>
+    </p>
+  </div>
 
-    <!-- style of map, to be put in /stylesheets --> 
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 60%; width: 70%; margin-top: 0; margin-bottom: 0; margin-left: 3%; margin-right: 3%; padding: 0; }
-    </style>
-    
-    <!-- loading Google Maps API, javascript -->
-    <!-- add additional libraries to the API! -->
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=#{API_KEY}">
-    </script>
+  <div class="filters"> 
+    <p>Find me a place to :</p>
+    <%= link_to "Feed me!", "FeedMe", :method => "put"%> <br>
+    <%= link_to "Grab a drink!", "Drink", :method => "put" %><br>
+    <%= link_to "Shop!", "Shop", :method => "put" %><br>
+    <%= link_to "See or do!", "SeeDo", :method => "put" %><br>
+    <%= link_to "Anything!!!", "All", :method => "put" %><br>
+  </div>
 
-    <!-- to be called for loading on demand if wanted-->
-    <!-- to load lang and lat -->
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644), 
-          zoom: 8
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
+<!-- asdflasdjflasjdflsadjflajsdlfjasdlfjlasdjflasjdlfjasdlfjasldjflasjdlvlznbknad -->
+
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Directions service</title>
+    <style>
+      #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
       }
-      google.maps.event.addDomListener(window, 'load', initialize);
+      #panel {
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        margin-left: -180px;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+      }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script>
+var directionsDisplay;
+var directionsService = new google.maps.DirectionsService();
+var map;
+
+function initialize() {
+  directionsDisplay = new google.maps.DirectionsRenderer();
+  var chicago = new google.maps.LatLng(41.850033, -87.6500523);
+  var mapOptions = {
+    zoom:7,
+    center: chicago
+  }
+  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  directionsDisplay.setMap(map);
+}
+
+function calcRoute() {
+  var start = "st louis, mo"
+  var end = "chicago, il"
+
+  //var start = document.getElementById('start').value;
+  //var end = document.getElementById('end').value;
+  var request = {
+      origin:start,
+      destination:end,
+      travelMode: google.maps.TravelMode.DRIVING
+  };
+  directionsService.route(request, function(response, status) {
+    if (status == google.maps.DirectionsStatus.OK) {
+      directionsDisplay.setDirections(response);
+    }
+  });
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+
     </script>
 
-  </head>
+    <div id="panel">
+    <b>Start: </b>
+    <select id="start" onchange="calcRoute();">
+      <option value="chicago, il">Chicago</option>
+      <option value="st louis, mo">St Louis</option>
+      <option value="joplin, mo">Joplin, MO</option>
+      <option value="oklahoma city, ok">Oklahoma City</option>
+    </select>
+    <b>End: </b>
+    <select id="end" onchange="calcRoute();">
+      <option value="chicago, il">Chicago</option>
+      <option value="st louis, mo">St Louis</option>
+      <option value="joplin, mo">Joplin, MO</option>
+      <option value="oklahoma city, ok">Oklahoma City</option>s
+    </select>
+    </div>
+
+    <div id="map-canvas"></div>
 
 
-  <body>
 
+<!-- asdflaskjdflasnblnzbnaknfgansdfldaslkfjalsjdflasjdlfjasldfjlasvlndalbnladnblandlflasdflasjdlfjalsd-->
 
   <b>
     <% if flash[:success] %>
@@ -43,43 +109,10 @@
     <% end %>
   </b>
 
-
-    <!-- sidebar? -->
-    <!-- 
-      <%= render "sidebar" %>
-    -->
-
-    <div class="loc">
-      <p>
-      Your current location is 
-      <%= @user.curloc %>
-      <%= link_to "(Wrong?)", root_path %>
-      </p>
-    </div>
-
-    <div class="btn">
-        <%= link_to "I hate this place", 'places/button_no', :class => "Button", :method => "put" %> <br>
-        <%= link_to "Looks pretty alright~", "places/button_yes", :class => "Button", :method => "put" %> <br>
-        <%= link_to "Find me somewhere like this!", "places/button_random", :class => "Button", :method => "put"%> <br>
-        <%= link_to "Restart algorithm", "places/reset", :class => "Button", :method => "put"%> <br>
-    </div>
+  <div class="btn">
+    <%= link_to "I hate this place", 'places/button_no', :class => "Button", :method => "put" %> <br>
+    <%= link_to "Looks pretty alright~", "places/button_yes", :class => "Button", :method => "put" %> <br>
+    <%= link_to "Find me somewhere like this!", "places/button_random", :class => "Button", :method => "put"%> <br>
+    <%= link_to "Restart algorithm", "places/reset", :class => "Button", :method => "put"%> <br>
+  </div>
     
- 
-  <!-- should have the @place.loc -->
-  
-    <div class="filters"> 
-       <p>Find me a place to :</p>
-       <%= link_to "Feed me!", "FeedMe", :method => "put"%> <br>
-       <%= link_to "Grab a drink!", "Drink", :method => "put" %><br>
-       <%= link_to "Shop!", "Shop", :method => "put" %><br>
-       <%= link_to "See or do!", "SeeDo", :method => "put" %><br>
-       <%= link_to "Anything!!!", "All", :method => "put" %><br>
-   </div>
-
-   
-
-    <div id="map-canvas"/>
-
-  </body>
-
-
