--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -117,22 +117,22 @@
     
 
     <div class="container-filter">
-        <div class="col-lg-3">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
            <p>Find me a place to :</p>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
          <%= link_to "Feed me!", "FeedMe", :class => "btn btn-primary",:method => "put"%> <br>
          </div>
-         <div class="col-lg-2">
+         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
          <%= link_to "Grab a drink!", "Drink", :class => "btn btn-primary",:method => "put" %><br>
          </div>
-         <div class="col-lg-1">
+         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
          <%= link_to "Shop!", "Shop", :class => "btn btn-primary",:method => "put" %><br>
          </div>
-         <div class="col-lg-2">
+         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
          <%= link_to "See or do!", "SeeDo", :class => "btn btn-primary",:method => "put" %><br>
          </div>
-         <div class="col-lg-2">
+         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
          <%= link_to "Anything!!", "All",:class => "btn btn-primary", :method => "put" %><br>
          </div>
     </div>
@@ -149,19 +149,19 @@
     </select>
     </div>
 
-    <div id="map-canvas"> </div>
+    <div id="map-canvas" class = "col-lg-10 col-md-10 col-sm-10 col-xs-10"> </div>
 
     <div class="container-btn">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3 col-sm-2 col-xs-2">
         <%= link_to "I hate this place", 'places/button_no', :class => "btn btn-primary", :method => "put" %> <br>
       </div>
-      <div class="col-lg-3"> 
+      <div class="col-lg-3 col-md-3 col-sm-2 col-xs-2"> 
         <%= link_to "Looks pretty alright~", "places/button_yes", :class => "btn btn-primary", :method => "put" %> <br>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3 col-sm-2 col-xs-2">
         <%= link_to "Find me "+"somewhere like this!", "places/button_random", :class => "btn btn-primary", :method => "put"%> <br>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-md-3 col-sm-2 col-xs-2">
         <%= link_to "Restart algorithm", "places/reset", :class => "btn btn-primary", :method => "put"%> <br>
       </div>
     </div>
@@ -169,7 +169,7 @@
 </div>
 
     <!-- sidebar? -->
-  <ul class="col-sm-3 col-md-2 sidebar">
+  <ul class="col-lg-2 col-sm-2 col-md-2 col-xs-2 sidebar">
     <li class="list-group-item">Title</li>
     <li class="list-group-item"> <%= @place.loc %></li>
     <li class="list-group-item"> <%= image_tag @place.img %> </li>
