--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
 	</video>
 </div>
 
-<div "container-new">
+<div "container-new col-xs-12 col-sm-12 col-md-12" >
 	<!--  -->
 	<div "inner-container">
 		<h1 class="title">Welcome to Khaos</h1>
