--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -29,18 +29,21 @@ hr{
 	height:32px;
 }
 
-.container-filter:link{
-	font-size: 16px;
-}
-
 .container-btn{
-	margin-top: 3%;
+	margin-top: 1%;
+	margin-bottom: 1%;
 	width:980px;
 	height:32px;
 }
 
 .map-canvas{
 	text-align: center;
+}
+
+.sidebar{
+	position: absolute;
+	padding: 0px 0px;
+	margin:0;
 }
 
 
