--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-  <head>
+<head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <!-- style of map, to be put in /stylesheets --> 
@@ -61,7 +61,6 @@
 
         directionsDisplay = new google.maps.DirectionsRenderer();
         var mapOptions = {
-          center: new google.maps.LatLng(-33.9248685, 18.4240553), 
           zoom: 14,
           center: height
         }
@@ -86,13 +85,6 @@
         });
       }
 
-      var DirectionsRequest = {
-        origin: @user.curloc,
-        destination: new google.maps.latlng(@place.latitude, @place.longditutde),
-        travelMode: TravelMode.WALKING,
-        unitSystem: UnitSystem.METRIC,
-        region: "http://maps.google.co.za";
-      }
 
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
@@ -111,10 +103,6 @@
 
 
 
-
-
-
-
 <div class="container-main">
 
     <div class="loc">
@@ -125,7 +113,7 @@
       </p>
     </div>
 
-   <p>Your reccomended place to go: <%= @place.loc %>, <%= @place.address %> (<%= @place.longitude %>, <%= @place.latitude %>)</p>
+   <p>Your reccomended place to go: <%= @place.loc %>, <%= @place.address %></p>
     
 
     <div class="container-filter .col-xs-12 .col-sm-6 .col-md-8">
@@ -189,7 +177,3 @@
     <li class="list-group-item"> <%= link_to @place.url, @place.url, :target => "_blank" %></li>
   </ul>
 </body>
-
-
-
-
