--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -15,11 +15,12 @@
 .container-main{
 	width:1000px;
 	height:600px;
-	margin: 1% 1%;
+	margin: auto;
+	text-align: center;
 }
 
 hr{
-	boader: 0;
+	border: 0;
 	border-bottom: 1px dashed #ccc;
 	background: #999;
 }
