--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Khaos</a>
+      <a class="navbar-brand" href="/">Khaos</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "How To" %></li>
-        <li><%= link_to "About" %></li>
+        <li><%= link_to "How To", "HowTo" %></li>
+        <li><%= link_to "About", "About" %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
