--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -2,10 +2,9 @@
 
 
 .navbar{
-	/*font-family: 'Open Sans', sans-serif;*/
 	font-family:'Lobster', cursive;
 	color: #FFF000;
-/*	text-align: center;*/
+	margin-bottom: 0px;
 }
 
 .container-fluid{
@@ -13,11 +12,12 @@
 }
 
 .navbar-default{
-	color:black;
+	color: black;
 }
 .navbar-brand {
 	font-size: 22px;
 	font-weight: bold;
+	font: #e9edef;
 }
 
 .navbar-default .navbar-collapse{
@@ -25,21 +25,21 @@
 }
 
 .navbar-default .navbar-brand {
-  color: #000000;
+  color: #000;
 }
 
 .sidebar{
-position: fixed;
-top: 51px;
-bottom: 0;
-right: 0;
-z-index: 1000;
-display: block;
-padding-top: 0 px;
-padding-right: 5px;
-padding-left:5px;
-overflow-x: hidden;
-overflow-y: auto;
-background-color: #f5f5f5;
-border-left: 1px solid #eee;
+	position: fixed;
+	top: 51px;
+	bottom: 0;
+	right: 0;
+	z-index: 1000;
+	display: block;
+	padding-top: 0 px;
+	padding-right: 5px;
+	padding-left:5px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	background-color: #f5f5f5;
+	border-left: 1px solid #eee;
 }
