--- a/app/assets/stylesheets/databases.css.scss
+++ b/app/assets/stylesheets/databases.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-  html, body, #map-canvas {
+#map-canvas {
         height: 100%;
         margin: 0px;
         padding: 0px
