--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -16,6 +16,7 @@
 	width:1000px;
 	height:600px;
 	margin: auto;
+	margin-right: auto + 20%;
 	text-align: center;
 }
 
@@ -51,4 +52,5 @@ padding: 0;
 
 ul[class=".col-xs-3 .col-md-2 sidebar"] {
 	width: 20%;
+	margin: auto;
 }
