--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -66,10 +66,10 @@
         }
         map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
         directionsDisplay.setMap(map);
+        calcRoute();
       }
 
       function calcRoute() {
-        var selectedMode = document.getElementById('mode').value;
         var request = {
             origin: height,
             destination: oceanBeach,
@@ -80,11 +80,16 @@
         };
         directionsService.route(request, function(response, status) {
           if (status == google.maps.DirectionsStatus.OK) {
+            alert("Loading!")
             directionsDisplay.setDirections(response);
+          }
+          else {
+            puts status
+            puts response
+            alert("Error: Something went wrong with the locations");
           }
         });
       }
-
 
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
@@ -136,19 +141,28 @@
          </div>
     </div>
 
+
+
+
+
+<!-- 
     <hr>
+        <div id="panel">
+        <b>Mode of Travel: </b>
+        <select id="mode">
+          <option value="DRIVING">Driving</option>
+          <option value="WALKING">Walking</option>
+          <option value="BICYCLING">Bicycling</option>
+          <option value="TRANSIT">Transit</option>
+        </select>
+        </div>
+ -->
+    <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8" onload="calcRoutes()"> </div>
 
-    <div id="panel">
-    <b>Mode of Travel: </b>
-    <select id="mode" onchange="calcRoute();">
-      <option value="DRIVING">Driving</option>
-      <option value="WALKING">Walking</option>
-      <option value="BICYCLING">Bicycling</option>
-      <option value="TRANSIT">Transit</option>
-    </select>
-    </div>
 
-    <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8"> </div>
+
+
+
 
     <div class="container-btn .col-xs-12 .col-sm-6 .col-md-8">
       <div class="col-md-3 col-sm-2 col-xs-2">
@@ -176,3 +190,4 @@
     <li class="list-group-item"> <%= link_to @place.url, @place.url, :target => "_blank" %></li>
   </ul>
 </body>
+
