--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -52,17 +52,17 @@
       var directionsService = new google.maps.DirectionsService();
       var map;
 
-      // var height = new google.maps.LatLng(-33.924868, 18.424055);
-      // var oceanBeach = new google.maps.LatLng(-33.924868, 19.424055);
-      var height = new google.maps.LatLng(<%= @user.latitude %>, <%=@user.longitude%>);
-      var oceanBeach = new google.maps.LatLng(<%=@place.latitude%>, <%=@place.longitude%>);
+      // var origin = new google.maps.LatLng(-33.924868, 18.424055);
+      // var destination = new google.maps.LatLng(-33.924868, 19.424055);
+      var origin = new google.maps.LatLng(<%= @user.latitude %>, <%=@user.longitude%>);
+      var destination = new google.maps.LatLng(<%=@place.latitude%>, <%=@place.longitude%>);
 
       function initialize() {
 
         directionsDisplay = new google.maps.DirectionsRenderer();
         var mapOptions = {
           zoom: 14,
-          center: height
+          center: origin
         }
         map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
         directionsDisplay.setMap(map);
@@ -72,8 +72,8 @@
       function calcRoute() {
         //var selectedMode = document.getElementById('mode').value;
         var request = {
-            origin: height,
-            destination: oceanBeach,
+            origin: origin,
+            destination: destination,
             // Note that Javascript allows us to access the constant
             // using square brackets and a string value as its
             // "property."
@@ -167,10 +167,10 @@
         </select>
         </div>
  -->
+
+
+ 
     <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8" onload="calcRoutes()"> </div>
-
-
-
 
 
 
