--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -53,9 +53,9 @@
       var map;
 
       // var origin = new google.maps.LatLng(-33.924868, 18.424055);
-      // var destination = new google.maps.LatLng(-33.924868, 19.424055);
+      // var dest = new google.maps.LatLng(-33.924868, 19.424055);
       var origin = new google.maps.LatLng(<%= @user.latitude %>, <%=@user.longitude%>);
-      var destination = new google.maps.LatLng(<%=@place.latitude%>, <%=@place.longitude%>);
+      var dest = new google.maps.LatLng(<%=@place.latitude%>, <%=@place.longitude%>);
 
       function initialize() {
 
@@ -73,7 +73,7 @@
         //var selectedMode = document.getElementById('mode').value;
         var request = {
             origin: origin,
-            destination: destination,
+            destination: dest,
             // Note that Javascript allows us to access the constant
             // using square brackets and a string value as its
             // "property."
@@ -82,29 +82,21 @@
         };
         directionsService.route(request, function(response, status) {
           if (status == google.maps.DirectionsStatus.OK) {
-            alert("Loading!")
             directionsDisplay.setDirections(response);
           }
           else {
-            puts status
-            puts response
-            alert("Error: Something went wrong with the locations");
+            console.log(respone);
+            console.log(status);
+            alert("something went wrong with locating your dest");
           }
         });
       }
 
+
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>  
 
-     <div id="panel">
-    <b>Mode of Travel: </b>
-    <select id="mode" onchange="calcRoute();">
-      <option value="DRIVING">Driving</option>
-      <option value="WALKING">Walking</option>
-      <option value="BICYCLING">Bicycling</option>
-      <option value="TRANSIT">Transit</option>
-    </select>
-    </div>
+
 
   <body>
   <b>
@@ -151,28 +143,11 @@
          </div>
     </div>
 
-
-
-
-
-<!-- 
     <hr>
-        <div id="panel">
-        <b>Mode of Travel: </b>
-        <select id="mode">
-          <option value="DRIVING">Driving</option>
-          <option value="WALKING">Walking</option>
-          <option value="BICYCLING">Bicycling</option>
-          <option value="TRANSIT">Transit</option>
-        </select>
-        </div>
- -->
-
 
  
-    <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8" onload="calcRoutes()"> </div>
 
-
+    <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8"> </div>
 
     <div class="container-btn .col-xs-12 .col-sm-6 .col-md-8">
       <div class="col-md-3 col-sm-2 col-xs-2">
@@ -200,4 +175,3 @@
     <li class="list-group-item"> <%= link_to @place.url, @place.url, :target => "_blank" %></li>
   </ul>
 </body>
-
