--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -92,3 +92,45 @@ input[type=submit] {
 	border-radius: 7px; 
 	font-family: "Lobster";
 }
+
+#background-howto{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	display: block;
+	background-image: url('howto.jpg');
+	background-repeat: no-repeat;
+	background-position: center;
+	-webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+	margin: 0px;
+	padding:0px;
+	z-index: -10;
+}
+
+.howto{
+	width:600px ;
+	height:500px;
+	background-color: rgba(192,192,192, .4); ; 
+	background-position: center;
+	margin: 2% auto;
+	padding: 2% 3%;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px; 
+	-khtml-border-radius: 10px; 
+	text-align: center;
+	h1{
+		text-decoration: underline;
+		font-family: "Lobster";
+	}
+	h5{
+		text-align: left;
+	}
+	p{
+		font-size: 14px;
+	}
+}
+
