--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -8,17 +8,28 @@
 .body {
 	position:fixed;
 /*	background-color: #9CF;	*/
-	color: #FFF000;
-	background-image: url(/images/background1.jpg);
+
 
 }
 
 .container-main{
 	width:900px;
-	height:600px;
+	height:100%;
 	margin: auto;
+	margin-top: 10px;
 	margin-right: auto + 20%;
 	text-align: center;
+	p{
+		font-size: 16px;
+		font-weight: bold;
+	}
+}
+
+.loc{
+	p{
+		font-size: 16px;
+		font-weight: bold;
+	}
 }
 
 hr{
@@ -33,30 +44,41 @@ hr{
 }
 
 .container-btn{
-	margin-top: 1%;
-	margin-bottom: 1%;
-	width:980px;
+	width:100%;
 	height:32px;
-}
-
-#map-canvas {
-	height: 68%;
-	width: 95%;
 	margin-top: 0px;
 	margin-bottom: 0;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 0;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
-.btn-primary {
-	color: white;
-	background-color: #428bca;
-	border-color: #357ebd;
+#map-canvas {
+	height: 68%;
+	width: 95%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
 }
 
+.btn-group{
+	margin-top: 3%;
+}
+
+.sidebar{
+	position: fixed;
+}
 
 ul[class=".col-xs-3 .col-md-2 sidebar"] {
 	width: 20%;
 	margin: auto;
+}
+
+.filter{
+	margin-bottom: 0px;
+	margin-right:0px;
 }
