--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -47,7 +47,7 @@ img {
 
 
 body{
-	background: url(background1.jpg) no-repeat center center fixed;
+	/*background: url(background1.jpg) no-repeat center center fixed;*/
 	background-size: cover;
 	text-align: center;
 	margin: 0;
