--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -7,16 +7,16 @@
 
 .body {
 	position:fixed;
-/*	background-color: #9CF;	*/
-
+	background-image: url(/images/background1.jpg);
 
 }
 
 .container-main{
 	width:900px;
-	height:100%;
+	height:550px;
 	margin: auto;
 	margin-top: 10px;
+	margin-bottom: 10px;
 	margin-right: auto + 20%;
 	text-align: center;
 	p{
@@ -71,7 +71,12 @@ hr{
 
 .sidebar{
 	position: fixed;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	vertical-align: center;
+
 }
+
 
 ul[class=".col-xs-3 .col-md-2 sidebar"] {
 	width: 20%;
@@ -81,4 +86,30 @@ ul[class=".col-xs-3 .col-md-2 sidebar"] {
 .filter{
 	margin-bottom: 0px;
 	margin-right:0px;
+}
+
+.btn, .btn-default{
+	background: #ECECEC;
+		border-radius: 15px;
+		padding: 10px 10px;
+		display: block;
+		font-family: arial;
+		font-weight: bold;
+		color:#7f7f7f;
+		text-decoration: none;
+		text-shadow:0px 1px 0px #fff;
+		border:1px solid #a7a7a7;
+		width: 145px;
+		margin:0px auto;
+		margin-top:5px;
+		margin-bottom: 5px;
+		box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+		-webkit-transition:box-shadow 0.5s;
+}
+
+.btn-group{
+	a:link { 
+  color: #333333;
+}
+
 }
