--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -4,7 +4,10 @@
     <!-- style of map, to be put in /stylesheets --> 
     <style type="text/css">
       html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
+      body { height: 100%; 
+        margin: 0; 
+        padding: 0;
+        background-image: url(/images/background1.jpg);}
       #map-canvas { height: 68%; width: 95%; margin-top: 0px; margin-bottom: 0; margin-left: 3%; margin-right: 3%; padding: 0; }
 
       #panel {
