--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -1,4 +1,4 @@
-<body>
+<body background="../../assets/background1.jpg">
 <div class='container_about'>
 	<div class='section1'>
 		<h1 class='sec_title'>What is Khaos?</h1>
